Added a local font, defined the route for the main page, and added and styled the header and footer.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,5 @@
+@import url("./fonts.css");
+
 html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
@@ -28,7 +30,7 @@ dd,
 
 body {
   min-height: 100vh;
-  font-family: Arial, sans-serif;
+  font-family: "Fira Sans", sans-serif;
   background-color: #fff;
   color: #333;
 }
