Created the layout for the homepage and added content.

--- a/client/src/components/styles/Footer.module.scss
+++ b/client/src/components/styles/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer {
   position: fixed;
   bottom: 1em;
+  color: #d94032a1;
   letter-spacing: 0.08em;
-  color: #f26b5e;
   font-weight: 300;
 }
