--- a/client/src/pages/styles/Home.module.scss
+++ b/client/src/pages/styles/Home.module.scss
@@ -5,4 +5,53 @@
   flex-direction: column;
   align-items: center;
   background-color: #f2edd5;
+
+  .main-container {
+    display: flex;
+    flex-direction: space-between;
+    gap: 4em;
+    margin-top: 2em;
+
+    .left-side {
+      .content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
+
+        .title {
+          h1 {
+            width: 35%;
+            padding: 0.4em 0;
+            padding-top: 0.5em;
+            padding-left: 0.5em;
+            margin-bottom: 0.2em;
+            font-size: 1.5em;
+            font-weight: 500;
+            color: #f2edd5;
+            background-color: #4988bf;
+            border-radius: 5px;
+          }
+          h2 {
+            width: 79%;
+            margin-top: 0.3em;
+            font-size: 3.8em;
+          }
+        }
+
+        .description {
+          margin-top: 0.9em;
+          margin-bottom: 3em;
+          font-size: 1.1em;
+          p {
+            width: 75%;
+            margin-top: 0.8em;
+            font-size: 1.25em;
+            font-weight: 400;
+            letter-spacing: 0.08em;
+          }
+        }
+      }
+    }
+  }
 }
