--- a/client/src/components/styles/Login.module.scss
+++ b/client/src/components/styles/Login.module.scss
@@ -32,3 +32,12 @@
   letter-spacing: 0.09em;
   cursor: pointer;
 }
+
+.error {
+  width: 90%;
+  margin-top: 1em;
+  color: #d94032;
+  font-weight: 400;
+  letter-spacing: 0.09em;
+  text-align: center;
+}
