--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,7 +31,7 @@ dd,
 body {
   min-height: 100vh;
   font-family: "Fira Sans", sans-serif;
-  background-color: #fff;
+  background-color: #f2edd5;
   color: #333;
 }
 
