--- a/client/src/pages/styles/AddPhrase.module.scss
+++ b/client/src/pages/styles/AddPhrase.module.scss
@@ -38,6 +38,21 @@
         height: 1.8em;
         padding: 1em 1em;
       }
+      .info {
+        margin-top: 0.7em;
+        padding-left: 0.1em;
+
+        .error {
+          color: #f26b5e;
+          font-weight: 500;
+          letter-spacing: 0.05em;
+        }
+        .success {
+          color: #4988bf;
+          font-weight: 500;
+          letter-spacing: 0.05em;
+        }
+      }
       .buttons {
         margin-top: 1em;
         display: flex;
