--- a/client/src/components/styles/StartModule.module.scss
+++ b/client/src/components/styles/StartModule.module.scss
@@ -29,7 +29,6 @@
       margin-top: 0.5em;
       padding: 0.3em 0.5em;
       border-radius: 5px;
-      background-color: #4988bf;
       color: #f2edd5;
       font-size: 1em;
       font-weight: 400;
@@ -38,16 +37,34 @@
       line-height: 2.5em;
       cursor: pointer;
       position: relative;
-      -webkit-box-shadow: 1px 1px 19px -9px rgba(73, 136, 191, 1);
-      -moz-box-shadow: 1px 1px 19px -9px rgba(73, 136, 191, 1);
-      box-shadow: 1px 1px 19px -9px rgba(73, 136, 191, 1);
       transition: all 0.25s ease-in;
 
-      &:hover {
-        background-color: #478ecc;
-        -webkit-box-shadow: 1px 1px 34px -9px rgba(65, 145, 214, 1);
-        -moz-box-shadow: 1px 1px 34px -9px rgba(65, 145, 214, 1);
-        box-shadow: 1px 1px 34px -9px rgba(65, 145, 214, 1);
+      &.left-button {
+        background-color: #f26b5e;
+        -webkit-box-shadow: 1px 1px 19px -9px rgba(242, 107, 94, 1);
+        -moz-box-shadow: 1px 1px 19px -9px rgba(242, 107, 94, 1);
+        box-shadow: 1px 1px 19px -9px rgba(242, 107, 94, 1);
+
+        &:hover {
+          background-color: #fd6557;
+          -webkit-box-shadow: 1px 1px 34px -9px rgba(253, 101, 87, 1);
+          -moz-box-shadow: 1px 1px 34px -9px rgba(253, 101, 87, 1);
+          box-shadow: 1px 1px 34px -9px rgba(253, 101, 87, 1);
+        }
+      }
+
+      &.right-button {
+        background-color: #4988bf;
+        -webkit-box-shadow: 1px 1px 19px -9px rgba(73, 136, 191, 1);
+        -moz-box-shadow: 1px 1px 19px -9px rgba(73, 136, 191, 1);
+        box-shadow: 1px 1px 19px -9px rgba(73, 136, 191, 1);
+
+        &:hover {
+          background-color: #478ecc;
+          -webkit-box-shadow: 1px 1px 34px -9px rgba(65, 145, 214, 1);
+          -moz-box-shadow: 1px 1px 34px -9px rgba(65, 145, 214, 1);
+          box-shadow: 1px 1px 34px -9px rgba(65, 145, 214, 1);
+        }
       }
     }
 
@@ -88,7 +105,7 @@
       }
 
       .buttons {
-        button {
+        .button {
           background-color: #f26b5e;
           -webkit-box-shadow: 1px 1px 19px -9px rgba(242, 107, 94, 1);
           -moz-box-shadow: 1px 1px 19px -9px rgba(242, 107, 94, 1);
@@ -126,7 +143,19 @@
       }
 
       .buttons {
-        button {
+        .button {
+          background-color: #4988bf;
+          -webkit-box-shadow: 1px 1px 19px -9px rgba(73, 136, 191, 1);
+          -moz-box-shadow: 1px 1px 19px -9px rgba(73, 136, 191, 1);
+          box-shadow: 1px 1px 19px -9px rgba(73, 136, 191, 1);
+
+          &:hover {
+            background-color: #478ecc;
+            -webkit-box-shadow: 1px 1px 34px -9px rgba(65, 145, 214, 1);
+            -moz-box-shadow: 1px 1px 34px -9px rgba(65, 145, 214, 1);
+            box-shadow: 1px 1px 34px -9px rgba(65, 145, 214, 1);
+          }
+
           margin-left: 0.3em;
           margin-right: 0.3em;
         }
