--- a/client/src/components/styles/LearningModule.module.scss
+++ b/client/src/components/styles/LearningModule.module.scss
@@ -1,3 +1,30 @@
+.general-information {
+  position: absolute;
+  top: 50%;
+  right: 2%;
+  transform: translateY(-50%);
+
+  .container {
+    width: 22em;
+    letter-spacing: 0.01em;
+
+    h1 {
+      font-size: 1.5em;
+      font-weight: 400;
+    }
+
+    h2 {
+      font-size: 1.2em;
+      margin-top: 0.3em;
+      font-weight: 300;
+    }
+
+    p {
+      margin-top: 0.5em;
+    }
+  }
+}
+
 .content {
   display: flex;
   flex-direction: column;
@@ -43,13 +70,21 @@
       }
     }
     h3 {
-      margin-top: 0.3em;
+      margin-top: 0.1em;
       font-weight: 400;
       letter-spacing: 0.01em;
       span {
         color: #bf2633;
         font-weight: 500;
         text-transform: uppercase;
+      }
+    }
+    p {
+      margin-top: 0.2em;
+
+      span {
+        font-size: 1.1em;
+        font-weight: 500;
       }
     }
   }
