--- a/client/src/components/styles/LearningModule.module.scss
+++ b/client/src/components/styles/LearningModule.module.scss
@@ -299,3 +299,19 @@
     }
   }
 }
+
+@media (max-width: 1520px) {
+  .content {
+    padding: 10em 10em;
+  }
+
+  .input {
+    width: 40em;
+  }
+
+  .buttons {
+    .button {
+      width: 9em;
+    }
+  }
+}
