--- a/client/src/components/styles/LevelTracking.module.scss
+++ b/client/src/components/styles/LevelTracking.module.scss
@@ -43,3 +43,22 @@
     }
   }
 }
+
+@media (max-width: 1520px) {
+  .level-tracking {
+    h3 {
+      margin-top: 0.5em;
+      font-size: 1.2em;
+    }
+    .levels {
+      display: flex;
+      width: 100%;
+      .level {
+        height: 1.8em;
+        line-height: 1.8em;
+        text-align: center;
+        padding: 0 1.8em;
+      }
+    }
+  }
+}
