--- a/client/src/components/styles/Login.module.scss
+++ b/client/src/components/styles/Login.module.scss
@@ -41,3 +41,15 @@
   letter-spacing: 0.09em;
   text-align: center;
 }
+
+@media (max-width: 1520px) {
+  .container {
+    background-color: #f2937e1e;
+    border-radius: 10px;
+    padding: 6.5em 3.2em;
+  }
+
+  .title {
+    font-size: 1.7em;
+  }
+}
