--- a/client/src/components/styles/ChooseWord.module.scss
+++ b/client/src/components/styles/ChooseWord.module.scss
@@ -20,10 +20,14 @@
   }
 
   .phrases {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 95%;
     font-size: 1.2em;
 
     p {
-      margin-top: 0.2em;
+      margin-top: 0.5em;
     }
 
     span {
