--- a/client/src/components/styles/CustomWord.module.scss
+++ b/client/src/components/styles/CustomWord.module.scss
@@ -41,4 +41,11 @@
   button:hover {
     background-color: #2d9bfc;
   }
+  .response {
+    margin-top: 0.7em;
+    padding-left: 0.2em;
+    color: rgb(243, 69, 69);
+    font-weight: 400;
+    letter-spacing: 0.02em;
+  }
 }
