--- a/client/src/components/styles/VerificationCode.module.scss
+++ b/client/src/components/styles/VerificationCode.module.scss
@@ -4,16 +4,16 @@
   justify-content: center;
   align-items: center;
 
-  .container {
+  .cointainer {
     display: flex;
     flex-direction: column;
     margin-top: 8em;
     padding: 5em 2em;
     background-color: #f2cb57cb;
     border-radius: 10px;
+    box-shadow: 1px 1px 31px -18px rgba(66, 68, 90, 1);
     -webkit-box-shadow: 1px 1px 31px -18px rgba(66, 68, 90, 1);
     -moz-box-shadow: 1px 1px 31px -18px rgba(66, 68, 90, 1);
-    box-shadow: 1px 1px 31px -18px rgba(66, 68, 90, 1);
 
     .input {
       all: unset;
@@ -30,15 +30,15 @@
       width: 8em;
       height: 2em;
       padding-left: 0.2em;
+      background-color: #f2bd1d;
+      border-radius: 5px;
       text-align: center;
       font-weight: 400;
       letter-spacing: 0.05em;
-      background-color: #f2bd1d;
-      border-radius: 5px;
       cursor: pointer;
+      box-shadow: 1px 1px 55px -18px rgba(66, 68, 90, 1);
       -webkit-box-shadow: 1px 1px 55px -18px rgba(66, 68, 90, 1);
       -moz-box-shadow: 1px 1px 55px -18px rgba(66, 68, 90, 1);
-      box-shadow: 1px 1px 55px -18px rgba(66, 68, 90, 1);
       transition: all 0.3s ease-in-out;
 
       &:hover {
