--- a/client/src/components/styles/VerificationCode.module.scss
+++ b/client/src/components/styles/VerificationCode.module.scss
@@ -19,7 +19,7 @@
       all: unset;
       width: 10em;
       height: 2em;
-      margin-right: 0.5em;
+      margin-right: 0.3em;
       padding-left: 0.7em;
       background-color: white;
       border-radius: 5px;
@@ -30,10 +30,11 @@
       width: 8em;
       height: 2em;
       padding-left: 0.2em;
-      background-color: #f2bd1d;
+      background-color: #f26241;
+      color: white;
       border-radius: 5px;
       text-align: center;
-      font-weight: 400;
+      font-weight: 300;
       letter-spacing: 0.05em;
       cursor: pointer;
       box-shadow: 1px 1px 55px -18px rgba(66, 68, 90, 1);
@@ -42,8 +43,7 @@
       transition: all 0.3s ease-in-out;
 
       &:hover {
-        background-color: #f7ca45;
-        font-weight: 500;
+        background-color: #ff5833;
       }
     }
 
