--- a/client/src/modal/CookieModal.module.scss
+++ b/client/src/modal/CookieModal.module.scss
@@ -1,14 +1,15 @@
 .cookie-modal {
   position: fixed;
-  bottom: 8%;
+  bottom: 5%;
   right: -50%;
-  background-color: #f25c5cf6;
+  width: 70em;
+  padding: 1em 0em;
+  background-color: #62a09a;
   color: white;
-  padding: 10px;
   display: flex;
-  justify-content: space-between;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   z-index: 1000;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
   border-radius: 5px 0 0 5px;
@@ -25,33 +26,38 @@
 }
 
 h4 {
-  letter-spacing: 0.05em;
   margin-top: 0.5em;
+  color: #ffc55a;
+  letter-spacing: 0.05em;
 }
+
 .container {
   margin-top: 0.5em;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+
   p {
     width: 80%;
     text-align: center;
-    font-weight: 400;
+    font-weight: 300;
   }
+
   .button {
     all: unset;
-    cursor: pointer;
-    margin-top: 0.5em;
-    background-color: #5faad9;
     width: 8.5em;
     height: 2em;
-    line-height: 2em;
+    margin-top: 0.7em;
+    margin-left: 1em;
+    background-color: #5faad9;
     text-align: center;
+    line-height: 2em;
     font-size: 0.95em;
     border-radius: 5px;
-    margin-left: 1em;
+    cursor: pointer;
     transition: background-color 0.3s;
+
     &:hover {
       background-color: #47a0e4;
     }
