--- a/client/src/components/styles/LoadingPage.module.scss
+++ b/client/src/components/styles/LoadingPage.module.scss
@@ -3,13 +3,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
+  margin-top: 5%;
   .logo {
     position: relative;
     display: flex;
     justify-content: center;
+    align-self: center;
     img {
-      width: 12em;
+      width: 11em;
       height: auto;
       margin-top: 30%;
       border-radius: 40px;
@@ -38,8 +39,76 @@
     box-shadow: 1px 1px 30px -9px rgba(242, 98, 65, 1);
   }
   50% {
-    -webkit-box-shadow: 1px 1px 60px 5px rgba(242, 98, 65, 0.8);
-    -moz-box-shadow: 1px 1px 60px 5px rgba(242, 98, 65, 0.8);
-    box-shadow: 1px 1px 60px 5px rgba(242, 98, 65, 0.8);
+    -webkit-box-shadow: 1px 1px 90px 15px rgba(242, 98, 65, 0.9);
+    -moz-box-shadow: 1px 1px 90px 15px rgba(242, 98, 65, 0.9);
+    box-shadow: 1px 1px 90px 15px rgba(242, 98, 65, 0.9);
+  }
+}
+
+@media (max-width: 1520px) {
+  .loading-page {
+    .logo {
+      img {
+        width: 10em;
+        height: auto;
+      }
+    }
+    .text {
+      font-size: 1.1em;
+    }
+  }
+}
+@media (max-width: 1200px) {
+  .loading-page {
+    .logo {
+      img {
+        width: 9em;
+        height: auto;
+        border-radius: 30px;
+      }
+    }
+    .text {
+      font-size: 1em;
+    }
+  }
+}
+@media (max-width: 600px) {
+  .loading-page {
+    margin-top: 5%;
+    .logo {
+      img {
+        width: 8em;
+        margin-top: 50%;
+        border-radius: 20px;
+      }
+    }
+
+    .text {
+      text-align: center;
+      margin-top: 1em;
+      font-size: 0.95em;
+      width: 80%;
+      margin-left: 8%;
+    }
+  }
+}
+@media (max-width: 600px) {
+  .loading-page {
+    margin-top: 5%;
+    .logo {
+      img {
+        width: 7.5em;
+        margin-top: 50%;
+        border-radius: 15px;
+      }
+    }
+
+    .text {
+      text-align: center;
+      margin-top: 1.2em;
+      font-size: 0.9em;
+      width: 80%;
+      margin-left: 9%;
+    }
   }
 }
