--- a/client/src/modal/CookieModal.module.scss
+++ b/client/src/modal/CookieModal.module.scss
@@ -63,3 +63,34 @@ h4 {
     }
   }
 }
+
+@media (max-width: 1520px) {
+  .cookie-modal {
+    width: 52em;
+  }
+
+  .container {
+    p {
+      width: 75%;
+      text-align: center;
+      font-weight: 300;
+    }
+  }
+}
+
+@media (max-width: 1300px) {
+  .cookie-modal {
+    width: 45em;
+  }
+  h4 {
+    font-size: 0.95em;
+  }
+  .container {
+    p {
+      width: 80%;
+      text-align: center;
+      font-weight: 300;
+      font-size: 0.9em;
+    }
+  }
+}
