--- a/client/src/components/styles/LevelTracking.module.scss
+++ b/client/src/components/styles/LevelTracking.module.scss
@@ -11,6 +11,7 @@
     .level {
       height: 2em;
       line-height: 2em;
+      font-size: 0.95em;
       text-align: center;
       padding: 0 2em;
       color: rgb(255, 247, 247);
@@ -58,6 +59,7 @@
         line-height: 1.8em;
         text-align: center;
         padding: 0 1.8em;
+        font-size: 0.88em;
       }
     }
   }
