--- a/client/src/components/styles/LoadingPage.module.scss
+++ b/client/src/components/styles/LoadingPage.module.scss
@@ -3,16 +3,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 5%;
+  position: relative;
   .logo {
-    position: relative;
+    margin-top: 40%;
     display: flex;
     justify-content: center;
     align-self: center;
     img {
       width: 11em;
       height: auto;
-      margin-top: 30%;
       border-radius: 40px;
       -webkit-box-shadow: 1px 1px 30px -9px rgba(242, 98, 65, 1);
       -moz-box-shadow: 1px 1px 30px -9px rgba(242, 98, 65, 1);
@@ -24,6 +23,8 @@
 
   .text {
     text-align: center;
+    padding-left: 4em;
+    padding-right: 4em;
     margin-top: 1em;
     font-size: 1.2em;
     font-weight: 400;
@@ -61,6 +62,7 @@
 @media (max-width: 1200px) {
   .loading-page {
     .logo {
+      margin-top: 25%;
       img {
         width: 9em;
         height: auto;
@@ -94,7 +96,7 @@
 }
 @media (max-width: 600px) {
   .loading-page {
-    margin-top: 5%;
+    margin-top: 0;
     .logo {
       img {
         width: 7.5em;
@@ -107,8 +109,9 @@
       text-align: center;
       margin-top: 1.2em;
       font-size: 0.9em;
+      padding-left: 0em;
+      padding-right: 0em;
       width: 80%;
-      margin-left: 9%;
     }
   }
 }
