--- a/client/src/components/styles/LoadingPage.module.scss
+++ b/client/src/components/styles/LoadingPage.module.scss
@@ -96,22 +96,44 @@
 }
 @media (max-width: 600px) {
   .loading-page {
-    margin-top: 0;
-    .logo {
-      img {
-        width: 7.5em;
-        margin-top: 50%;
-        border-radius: 15px;
-      }
-    }
+    overflow: hidden;
+    margin-top: 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-    .text {
-      text-align: center;
-      margin-top: 1.2em;
-      font-size: 0.9em;
-      padding-left: 0em;
-      padding-right: 0em;
-      width: 80%;
+    .loading {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      position: fixed;
+      top: 45%;
+      transform: translateY(-50%);
+      .logo {
+        margin-top: 0;
+        display: flex;
+        justify-content: center;
+        align-self: center;
+        img {
+          width: 8.5em;
+          height: auto;
+          border-radius: 20px;
+        }
+        cursor: pointer;
+      }
+
+      .text {
+        text-align: center;
+        padding-left: 1.2em;
+        padding-right: 1.2em;
+        margin-top: 1.3em;
+        font-size: 0.9em;
+        font-weight: 400;
+        width: auto;
+        margin-left: 0%;
+        letter-spacing: 0.05em;
+      }
     }
   }
 }
